force-app/main/default/objects/Deal_Participant_Change_Policy__mdt/Deal_Participant_Change_Policy__mdt.object-meta.xml
<CustomObject><label
  >Deal Participant Change Policy</label><pluralLabel
  >Deal Participant Change Policies</pluralLabel><visibility
  >Public</visibility></CustomObject>