force-app/main/default/objects/Deal_Participant_Change_Policy__mdt/fields/Require_Approval_Reassessment__c.field-meta.xml
<CustomField>
    <fullName>Require_Approval_Reassessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Approval Reassessment</label>
    <type>Checkbox</type>
</CustomField>