force-app/main/default/objects/Deal_Participant_Change_Policy__mdt/fields/Require_Conflict_Reanalysis__c.field-meta.xml
<CustomField>
    <fullName>Require_Conflict_Reanalysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Conflict Reanalysis</label>
    <type>Checkbox</type>
</CustomField>