force-app/main/default/objects/Deal_Participant_Change_Policy__mdt/fields/Require_Protection_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Require_Protection_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Protection Amendment</label>
    <type>Checkbox</type>
</CustomField>